fix dns domain again

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,39 +1,39 @@
-#ENC[AES256_GCM,data:ot6JPSyongZ4G8CBbDdq3eHNmaz0hlqnnYp8sadq1juZVDMQqdrsREE6RO11CmZOAzieXoUfIMT0RyKZFZQyb9w=,iv:N4kIzL1aAoYtuKSV+IC7G306s4+0b57ADKzPmWoY0yU=,tag:H7Chh+/m4mSTBPyksHPVsw==,type:comment]
-#ENC[AES256_GCM,data:g2hSmHnulRjs2utRSSoASPvhibp4FDKrmS+MepfIMQMhPT0IMEjziunBD5k=,iv:HHhRUMG4fGalgInFCSSHTLtm94t7+RVvJSUUpE1hl6E=,tag:v5HjnuOJOshLT0JhlvO2ug==,type:comment]
-VIP: ENC[AES256_GCM,data:v+WpfeWaxC7WxCs98w==,iv:M6QMozCylP2nlBalVmZoo30/HutsBv/UEfs+Z5UDOCc=,tag:kdcukq3xEBC/+T5q/FgcYA==,type:str]
-#ENC[AES256_GCM,data:ziDx1JU71BSqiuci18A8r6WXUOu6UhxtkaC3,iv:ErrUZFmIFbzC6tetmKAWjJdBP2Jt1GVX0ud5BccALCg=,tag:SC+fnUA49UqIfsKj4O/MsQ==,type:comment]
-#ENC[AES256_GCM,data:0+gIv5cWVVV37gikhg7Hgp1nS0qZPR8Czo0VtAVsEcr/OpJZzVLT5KTArCNNIreG3pHncwEb/z1tMPpX0a/OIQQkwxSI6gJTEKNzc8bdtJ8TAGHi5KsIDVs=,iv:wP9jjPrpIBUZvDAwRW8dZONmtaiIsFX5RIdStOtIPhM=,tag:J0bK7q7pkKxkacONcdhQyg==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:BgTfU4UMqJcBpbievII=,iv:byPuwrU2nH54tvEfsEZhzl2YV1Trn1FIx76T1nmnzeM=,tag:0XPdDf1+/jNf6bufVvknTA==,type:str]
-#ENC[AES256_GCM,data:6VhTriru7DU7EmayQf1V7u040WkKGamsFhCRmdgjGMId/A==,iv:j+taKE/hy23xlSXu4BVBJCLyoGl06KGEYGnwJVodzr8=,tag:MseQtqAccltrW9pHJIGkBQ==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:jOqHprZNrmi5uGOk4g==,iv:ZQsMvybBHIXwf2W/rrzd3UvP/fbaNmrngJgv/mTU2KE=,tag:hTKjyzD4USDsEDqPWlJrrQ==,type:str]
-#ENC[AES256_GCM,data:KErTW/u0oKR3HGIMFfBgsfd/oEkQiER8xQ4DEaXVpbo7jRiF4SOl92whDHqcejY=,iv:1stnq2GDgdvnySIAjiP3hbd1/ZHBWNAZfeJa08DAE78=,tag:rj+GMDTUFEE+6g31KLB5Iw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:13R1kyqGX58fsr217jehZYWzcrHLQPPB207NYLZuIQ==,iv:aVJ1rx4bA7ifFVqjI0zqDKlrdlDhHhefEJzt7YYmA38=,tag:jB80DxWlKGHpmByRsQHmiQ==,type:str]
-#ENC[AES256_GCM,data:rY5jbL6Urv6NpvZcrHrD3yUALNjdfaXlMEs+IOnhhUovzFbFi6Ku8KWt8ZbdgWGaNS+r+13I19gacDzqvGMQIX9QWLBOLFqQrdBC2I1aFmvZjg==,iv:mx3SqRAUgJ5y5zR7S1xXI5UQp8j44GHerFdo3rH4OY0=,tag:REedNuDVZyfoo700dcIESg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:pDfiMP3ewEGTMwU0z5In,iv:2W8uTLIgh5OwjowE1+u8ctg2rYXd1SoQ56foEFKal+8=,tag:FEvFE9HRAZNm+/g8fRp3cA==,type:str]
-#ENC[AES256_GCM,data:sHNowyDIvdHdGId3XRiXdyyCVJzuAblqj6s3smihI/sd,iv:axK6kaNwlYRmpeDFDHqE78eP4EaB4UX+pbTIG/KEC5s=,tag:c8U0F+vM5j4gMHN1hyWfTQ==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:yVBCzgd/Fx4t5gBeB81X,iv:s1FlkIuQGZKv3AISSoFLyT59BpU719bt5U9qdyFcDxw=,tag:yuPtkJFywvmSRvF38/edVQ==,type:str]
-#ENC[AES256_GCM,data:SG0J21MPjvpvYi2cKIPtuEzlL6NN5I3IALfnyPXgBIXSYmmORLXbBHxALTvi81Nib6c35rQp5GYMfAmZUA2Z2r6XWYQ7nbetXuU18HNLxTY=,iv:mzZZYyZ2AeOeTLL1z+ioo37HEWMCU5kK3BRGu3qjV2I=,tag:JGoyPlzjPHOz2dHIuj9MSQ==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:x55dMmJclimLbZEYDxNY,iv:M1GoZ90Mt6dnm8cRdpcLDy/ui+qXTDHdVGbInayctmg=,tag:8/MxsEjwmYUXsdXcUY/kOA==,type:str]
-#ENC[AES256_GCM,data:MfKgiguNiQdzSmGFANCEiWN+QzozyquKQFrUMWlx4vTp8sNAhKtIXmcD+a2K4vjvF81HWscHy9YvA9Rmqhzpl55D/DF8CbnGepnEGJfkMgbr6pa6duTi,iv:tP3tiGiX52CDuHsVgQZETF53nkLijTgFKON12UCvlN8=,tag:osSkVZigBV2d+552K52y8Q==,type:comment]
-#ENC[AES256_GCM,data:82Ea1to3tVB1WYjlF7lbRg5Kea148+ydxgCx28TcAnuQvo66ZDKzJDlsFT423vSXvubNXAGDsCJSN/GqIAJq/UgXUFQsO/aRKPICjD4YBSNHlp0TTqhiQmh8/Ty5WOOumnGJJ1sngaWtQrum4VdS3C9Vmw+hSjyACCdxSQ==,iv:aRSjzRVi6ZNGxLo7PI1Z6xYvlTZsRKPfu0/Ls3wmt4M=,tag:pDJZnHStdwaW4fVVDSWtMw==,type:comment]
-#ENC[AES256_GCM,data:sY+76Jec/dhqYyy9cYK58Y2sUQewUQS7vBhkaIHKEW11YTjsdw6n5i0P11LFcZa8SxALsiNzLRQ4mxkZHzDUPW5aBa60+GYwtslLGVosRjA=,iv:SDZTabeYl6j0t5fZf7+QBwMfz0WnUUkl6tM57dRxrqA=,tag:dpFxuCxPPCOk7vm1DKwYXA==,type:comment]
-#ENC[AES256_GCM,data:MPw8+cMbnLzlwCX2EVM9p317tfNfn+cVKxYD8kevhv7SOeYDYc+45g8LvxMecBhKt3jD25Wm,iv:64SmKQ7E8pUO7fnp5rozAG63fsrxXLcgHqp/m/ziHLs=,tag:+3mLjDt/1S95Zhn3lA0alw==,type:comment]
-DDNS_URL: ENC[AES256_GCM,data:3AP7hj8OVffW0lfwuxM=,iv:Ourc1nT3beiH5Wn1j01SKfA0Bx3e1m6Tl+TEkVQ8WC8=,tag:OUTNJvZhSzVNX2kQTnnZiw==,type:str]
-DOMAIN_0: ENC[AES256_GCM,data:SdJObVrpV6KANnEJ,iv:aY6UkdNeOnzZXybfgwA/hiZ9igoN3KonPUyPAArG2bo=,tag:9s0hiWGVN4IP6ASyahPmCA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:t14CbhpEPcNiYb1jOxOhVYQ=,iv:1/63yZ1W3srqV+GLGUaq/t2yfBErLdaH8ZkiWaVHjAM=,tag:gRRSn0sASsftVcTXeX36Aw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:rrtuJXqmMMt+egaT5hYj6V6XsmuTXICFKkggpqpje3AhyPCc4xlowg==,iv:UP8k4G40NdRz8OTb1zv7Fsz9xeXXTfkMDI0kmjKnvRA=,tag:uu0s3dy8qK+XokDQCAYoVg==,type:str]
-DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:DzMTgpQ4tYjEpewNbf4eUMnxYWxTTiDubmpmtSDDSMH2D/0huA==,iv:qTG9dpinYI+2t4LIFe0ljsaR1FxgrPotaKDfsYnQM/w=,tag:A84goguIpbWn06hFBnFMCw==,type:str]
-#ENC[AES256_GCM,data:rumjW+em3FTLEXNTvmZDajlhK56avJPttsYOIB+M/x9wmDuJCPosZgq3j4tXaM5fVB+mH1H7Tqo=,iv:rcN6qamA/IZnt+oiCH9eCWrY3bBL21ZEU6WXT6iwqMU=,tag:vb1sFslES3uIV+QZimYYDA==,type:comment]
-#ENC[AES256_GCM,data:GHv0BY+WXbHHUy+Z0bN2AwkdDhIxb6201g==,iv:sJWs+y3468NhV8AsBQ27H9tSd+4t8mYg8Weuhx/EDMg=,tag:k5dRSgdKw5BaZzWFoWdH+Q==,type:comment]
-#ENC[AES256_GCM,data:40q+S3j52NeTuMzCAV/kTo8HeyUz+vG6j2qMwtL4TLeeKwoQyeQcwJyT3e8g6TYpt62xxNOSdLZ6k4R1GmpWQjDyNJEmwI4+91pidYw=,iv:E5+IiNTlmF1GflZ8gbqTvnhh+wo2GIGjOvWr/ip2aoc=,tag:JIUo7zr0R0NHAP9MyKI3cw==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:N6Gvz5nZ9639WFwaLrPqo5qduGA2Xanw6aH4a6/x7EhYvgA8LLCWhcZwiyM2zRjO,iv:WQtSb+mdOuPxJ7qodhfBqwRuAo8r1OUuXRchaTC+2yg=,tag:ocewYu1GptVfBUODRrECHw==,type:str]
-#ENC[AES256_GCM,data:KNH8IeJoccd+yeM2B58rRbgv7v+L2cxy5CtRC80ecONutyzhDkF4ZTDrS1QBajBtXIHwqS8FMWU1QULq2ZrgI9w6B4EEWhE=,iv:/m5ApBV20oOOo9fnNQvZPmsW5XV2cqfYk3WaYa7gZeQ=,tag:IzZUNHWlLW8zJQkmm2Mf3Q==,type:comment]
-#ENC[AES256_GCM,data:TadMjCszaUn8sfOMnrL1QxHf53il9D7P7n/6T2gSy/LWM/qT8befr7ttKbWK7EcQmwXO6bHh,iv:qWk+44odx7YSETd58AaYk1e87Me4Bdfd0aJVwi7fDwY=,tag:iNyUetsEQIvtQQm3TBC9rQ==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:+yoQ9ewLKQ==,iv:LahuMo1B2ymOSiLueUr8WgeB+PgLYduUqHkSJsKuwVI=,tag:has/NfZWMPy1FA6pE4yCJQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:tGrdXYEIqO2nBLsgRdsF3bXvzZA=,iv:ZgTuXMmwwocXl6Gso1TE6gXWgjnrJo1opZUhZ72egwc=,tag:AdQzmFD9STq9MwhpB55J6w==,type:str]
-#ENC[AES256_GCM,data:bE2d46AiDRzlnKH1NQQ=,iv:frwcvpSnLVlnM8XVlOsiB1pagmzoek8Dhf0tpjobFlM=,tag:4N2OM8Korelfnk+1Rhht4Q==,type:comment]
-PODNET: ENC[AES256_GCM,data:4g42kTp2xcrvu6J2pg==,iv:8ZaiOhynsY9nUn4gphJ0k1nZ7Qj+4KM4nwOGY37msoM=,tag:vTFjzymCKSp8N7087jAcKw==,type:str]
-SVCNET: ENC[AES256_GCM,data:HKU4EsksheX/F1MyCw==,iv:hiOgnL3GmQTRki1hbqwlyQeXMUvo+VPAOwj3vcb2FK4=,tag:MSY4bttyp8S7GDmj7c3IRw==,type:str]
+#ENC[AES256_GCM,data:7BcIpME3laaKKnaZZcDnRQk8zBxJeVOS8J7pibDDr+HzxS9/ffq398N+QTlQBUAOxKMl8rUzU5cUCN/1sEUgwAs=,iv:wv4FXCbDm6CsdT/7FTVX2nGtoPjczKlwzXLDZdlPM9o=,tag:N3O/V0hpAU1bLYSjcj86FQ==,type:comment]
+#ENC[AES256_GCM,data:9F86ES85zD5pog5ZUcr14RKZLP1lTeftNwnVf2TbMPL2/iUQdWir4JLJtXU=,iv:oaMUDd3nvQDnoi8K7E1WSz7m6xQRU65MPtHQL379PoM=,tag:jQH90iLtY+XXzDoStekiBQ==,type:comment]
+VIP: ENC[AES256_GCM,data:V9cek5tDderQjpRW+g==,iv:6mZYzfc8diGnA+cpqNsK3e4hzncpeZCkvci/JdXYqOo=,tag:2wYZi/B95x1ru77jEAdO8w==,type:str]
+#ENC[AES256_GCM,data:rm7taekre/AqjF79kt0A9hEem5wVOh5KHLvo,iv:Q9b75PMwtny7tGgRB23gVHMH/1SMy+PrLwnXbut9QpE=,tag:5YstBaIn9CM+KLctZVvjuA==,type:comment]
+#ENC[AES256_GCM,data:7xUCLJD4V0VdA8CSobq0T0Ms7pmnsPENK/eH1hVxOWJf1s9fg3X37Gf0XGdEA+7Bzdg3E8qptDF3fnxgFs65DNMxS2vUNHwMEzBQT6+DKOBw481LvOoPBsQ=,iv:kPb2ziy7ixwDdEjKuAI5KkT6+SiM07Bqdp1QnAfMv3A=,tag:a+LWuywfaM76HQztPkVcqw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:AQqurwHvjYEDWVxLmP8=,iv:5HEyZ2CA0pP/sjdFqTTOxmIaC7ZzePIgMoKeCJmhjjg=,tag:Hd9BXSzqN7muQSaVvV5IRw==,type:str]
+#ENC[AES256_GCM,data:Ut6MMop0Mfxiyo0JbAwtlpSOMTD16FW0Hsjn1ct/N2yg0g==,iv:DPF0YF5yNoGLRPuW8lPIiyUBFLqlY4xwUocmuMmEWVU=,tag:hh6UgG5l0e6+x/j4ldbXKw==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:SyqyyV9oXYUKWpUJxA==,iv:eoUtpBHTL/SsCXzm/NHYbvc8om9amNDEF/4qWAC5/xI=,tag:rJMeZ7gpN/LFylFtO2ZEYQ==,type:str]
+#ENC[AES256_GCM,data:dPxKHnWJOLfq7ANJnm1VvTeKGuTRR6ix6Z2KFFIpAm3GvspSozOtrEIiS4XkaIk=,iv:0foBWRz122afha/b9vuep174qXcrxmmQTCPulBPWDkw=,tag:AqTrP7CdkZ4FiOAWhVmqUQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:W0gUFmNtyE0mkWFrBe+IaTwzY5Ch0cMpKf2XZ3DB6Q==,iv:cyRzqA1MyWRMQJzU1gzhbRVFeHx1H/OgZq7d5ld4nEE=,tag:nwifeV8qOg+QEcNWjF/9vg==,type:str]
+#ENC[AES256_GCM,data:P/2sOdOWzg3fyTjwy5OAqndNtnLTdol8tAXgLKo+cnqhn9xUOPg7rAjXUQzf/kuknfI8/LchM9i17wGllxbdQKUBJ8SDRziiS1unhRNmPjBDBA==,iv:PdkPR86mRF3PISyK+T6MN7xSm9OnQidSEv0EpiBkslk=,tag:cUt/IqJ1tk+V1scdqiMiWQ==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:h6iYxI/DY8NeF3H496i9,iv:hvtF+Qeq8PIwV2IVDe5kvJj1eCwOyuoxyQLWtDdqvOE=,tag:+nU+lW5Gw6BdbidkrmBQnA==,type:str]
+#ENC[AES256_GCM,data:DWHaqNmBZpo1/y0C7Wagvqd7gIAN4xpZ2Lh+HLW9IFrY,iv:gI7tXGbZk5yqDrnHA0T3wZRZJnm5PFdpJerHVt7Vw7E=,tag:oJdmR4SHlMhdky1la7pNuw==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:jR+zFhUj7wOrfS+ZfuBy,iv:cDr2ZQyopIvrKel0cuar3I7N2OTP5SSiS3RUMxXBSDM=,tag:in7Jv/y6Lf46MAuPUDTZjg==,type:str]
+#ENC[AES256_GCM,data:/LrMY+PN37Mj3ohWZwOdYXYyqeA6fjTjf7GTQochkW5CMT0tHtvegw+TkfxVswahwdumAcZLr7A5KMFZrpHgI7iDtrv0zAbrb7MXvYSAmyc=,iv:fgIA4v643LwgxSNWa50XXBT9RZXOvQ3D8RMaQOxXX1E=,tag:lFs2XvNqPFIKhZXEqpWc5A==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:cZG8WDzLPFG33OivpbtQ,iv:TEWYOE+pVfahy6+HBu5WH2ocADXH5bG9eJlaJQKY53k=,tag:m0AnYH7JXxeIpmtP1RsNzg==,type:str]
+#ENC[AES256_GCM,data:oseyrWnfbr3xET7m/IdN3BITg+9J1ZNwdVvW+hYahI5CgPzfRyCFlwjp4FUpcf6fgo2EvuIghcQvGSGUwK4C0ya+4VoW4LR1NIA4l8MCJciQbNompzz7,iv:ynh1S+MoCNa02VM8Fj9w8oKGjc+//exJZ0i9hyKF1D4=,tag:aNgTc6lBpebx+bN6yFLwpw==,type:comment]
+#ENC[AES256_GCM,data:l2hlIibbtl6wudE3P0FfXCN+ZZRJ+4tFyQ3qvDdmojLRQnq5tcN4MRj2r171hTVVZeBBi9aPg2HiUtGvvJXWSFto25ZTzyJNhfhsKFHMcyNMqXq51lQr4+IeyFtcBeDcQsplJMlbBl2fO6ZlFdQSw8RiFlm9e/wwMf0oMg==,iv:iCHQPlXm6NxeByhVwVj2XKNzr2M44uuoqsQZZ+h/BIk=,tag:gpfKdSsnfpU74/NriN9jCQ==,type:comment]
+#ENC[AES256_GCM,data:W3j4iVuiWIIG/lnynxoBPD5PbWT1/8Yx+bcUSBuFsPYJLACC9dHsVAv4Do/jg6qyqNje10ybgLUygiHK+pe1VB5Dzu/8TmYUKBfIV5BWEP0=,iv:eW2w0TCukXXuqC2NhcM1HuAVWKxrw0aa4XwuBSWSdOI=,tag:fOXs7lDLoECgqhvbHxFSCA==,type:comment]
+#ENC[AES256_GCM,data:2DZ98HCJ6CbQZehgHw/JY6zKGyRNUPt+g5Lt+ZJqT7QPzNtN8Curf/GJLmhN1tdOkrbUOCOE,iv:1zgyZDGBAdhGG9teRIgPpeWDuR+y4EPZUcS9LrwmWuM=,tag:Fa3J3lgxC6cCzzRmNF3pFA==,type:comment]
+DDNS_URL: ENC[AES256_GCM,data:0/1EBuuGXapRh7046e0=,iv:8QemZDvRBcNC1/G3WgtKjfT7IExF802mnmocpGT+7Js=,tag:wvEx0KqaKwcXMVN7CtmBHg==,type:str]
+DOMAIN_0: ENC[AES256_GCM,data:Fd+YrbMl3tmS10nL,iv:/TYyNxjEI222b4dc+RqwEOD9Uyo48tZFMT+AYmUiEeY=,tag:HlXzpAzHKpSbaDReIvRKFQ==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:ZQn3B6RRBRSgjQdRtyPLHog=,iv:Epsox0GyKEA1C77Frr4hX1T//DfGRxXlsZDB48M39/o=,tag:hvKbKY0rPtyrwRQsfzbt7g==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:eyp2tNzNuSUo4JQ22ZbWBxYQMYRswTzYXJx1joCjjvuM+7trGWWJGg==,iv:DnY4kO5/Zo/RoxA4zCxXSr9es638/AmWQXaXaIYuRI4=,tag:fD2/dEIQCHdgbssvspHZWQ==,type:str]
+DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:5mI1sG4y7yuaXhpxJF22rk6msuwS+YZfFYh4yMqbAk2/waaGmw==,iv:oFFhbpURN9lcYJM3NEGwRA6BOEIAVno7B8Nb1VDTaCI=,tag:Y7rDgU+aQzbpDAuiGFKgDA==,type:str]
+#ENC[AES256_GCM,data:variXLHS/4vWYafCyiiWwMqJ0XIAUQYWYDLDiZeTdUNE9jlDfqjqPoXNNOwUJrIRNv7vuxzPHCA=,iv:wcyzQhObZqr6OkgRlpy8bhkPxOZ4KASzPNeBENvo9B4=,tag:Y45aZ+c/g41O2ugFrGVBAA==,type:comment]
+#ENC[AES256_GCM,data:fUeIuYXjrRXT/guYS+aHCMb1CCaMk2oNwA==,iv:Zf829xdhbusvU6BEGt2D25gDCnrppfvlem0KYdPS9c4=,tag:NZYupBY9JfkSGN3DWSzNBg==,type:comment]
+#ENC[AES256_GCM,data:3bi+SFrtazznnPVMz8WQ8ziBAWn6CpbbTZjCqxUDesdFfVZL5eJjW8xJL8q7C45D4JnpdnvNH9FHX/aQkrfdouADhC/6psxeP3MPHV8=,iv:AczfScZJeFnwLm+8NAvEOo/BFartg6XKwycXNXTF74w=,tag:Tbi/EI8Qj/RJbFrUQ30lUQ==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:zIL548sQXH7T/uPnCN5T+NCPiWxHMwsKzGMaUGAXS6Le+LGRSarpm/O3fb3HmbTN,iv:RF/YLoqmmLpdLOOwaKURV8+cKnhymm6FOHXaLps8QUU=,tag:2IY5m/DAfBu2yOw7HWw5jA==,type:str]
+#ENC[AES256_GCM,data:YENvk3UY6u4MyG30l7s18ZGVC/LDW7iizem83CVJfD9RIECel/xIhOYMp+eM4HLHJRySXaL7a/vqWRxirTjwK9NgcwAzFyM=,iv:ehvIoQcD+l8vhmxfAULiHLraR+ikI3icjkfkcJVU9Q0=,tag:pBSlKtosyL+ivkk4kgSbhA==,type:comment]
+#ENC[AES256_GCM,data:M0KmqVpXwA6aFXxqmqnGarloBQmb/HaBUMAUwOENJabfs/3lzAfNUr7Q3/85Fzu6cpzyNr8U,iv:eCQzb9jHSsCZRJGBv2PoElowbCOx4lgPIHBF9FFNnuI=,tag:35plDWGfjf2o2TZA1+5p4Q==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:ppHHII4rpQ==,iv:wx79/y+BAWp9jQhGub8TH6EobSxCssmT3qU1csuXDqM=,tag:QZHxH+YCMhcwUPXgQk0Bzg==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:u8PD+y/RPzV9DTJiy4miVu1ngI0=,iv:UUCGl6oD9+sFkdqPuODnaeA14Ax59wZY4JAFx6PIp9w=,tag:PCFxKST7V8G79DyNHJHLjA==,type:str]
+#ENC[AES256_GCM,data:bJ6Cipb7m8M3FQ3b3h8=,iv:cRS8cgdH3DguGdFo3lT6yybDrbHk2ty/6DnC3zYdLUU=,tag:gPsUVirhcezhf5l6CcaJaQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:JO06Y5gZthDtsS420g==,iv:bfB+twX0BE88yTljps6RUchihPUhSYTUj1SyVcu9Qj4=,tag:I1XxyGUuvJUspzy1ficDtg==,type:str]
+SVCNET: ENC[AES256_GCM,data:43Qn9b2H5ebDxdj9Eg==,iv:N69ePpqG/CekaHEAm7ZC/XYTZJC4/cxpsSFINXuk4Rw=,tag:vnyeAvrEa8H9Vf0d1Sa0uQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -44,13 +44,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkeFpEV1E3MzE3K29UNXV1
-            dHVDMDF1a3luU3Fyb1dacVF6TFZ5RDhDZlNRCk4yNFZHTm5udWRJa3c5YWdnTEVo
-            SFpJUFhhUFN0SG54WWx4cFpoWUFxOEkKLS0tIHVkbTlwUzU4ZzBQM3pJVVhYblJq
-            dVVldDdncm8wbTU3cE9ZYll0QTd0VlUKTzEs1B1IuBs3SMuq+XhxDQVSYCtkfXHg
-            t3QMz9BgddEikDBpFIuNCtx/FqLPnys5yjuWj461Wbftrzvszhs+HA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqQnJVVmZJNzVSSE9YL2ts
+            aWhZbkJ6TnFvK0dkUlJSR2lDYVI1Z25ramhNCnJHSW9WOHRxSkNXU29IZURvL0VE
+            QlNINUdnU1pzR2hLa2RHNS8rVU4zeGMKLS0tIDlwaW9MYnFVeEZtbVZMWkh5bGFp
+            TnBiaE5DZ0o1SlpkK2FoZHpVRWhqNFEKWhDecKkKzM+n+dD8v+FICGeVft9gkwUW
+            CP6vGtlkjVe+eXTgv9HY7349BNWlbs0FdVsViu3QvVvCMsjcQKt1Fw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-30T23:02:32Z"
-    mac: ENC[AES256_GCM,data:pnYiAByPiR+y1vbWB5n+M3mxg1eaCn+qcQYEsJXIdLyUq0y8Gq9JbHkJ6nwSghb83RqD+/2Jg+3ASqKBYR6mqCBTg0BW+AQWkK/74o9N4XNeqWoDlRqOFjgeXYf2n/FnHacTVeA3bCh2o0ED0w4dnTGb1dmGZ28GuZ0lPa14OHE=,iv:zUiuk3M2FLwXTS18izkfgdzo0jvnXnb2nVxdH+ex3e8=,tag:vCK2d5QXlrnOE5Q/x9pd1Q==,type:str]
+    lastmodified: "2024-12-30T23:10:35Z"
+    mac: ENC[AES256_GCM,data:CNY5jBrAB9C/RAd467DkhHPb/U70J5fMQw7KPmXTDiC638BS9BUAASa3ORlXG03n3QBDcCC4USvFVI4GJg2ycdWQaBy3c9vaEePoyO6l1BZ8YE93YgcTXlik1WaszaAEVAsKwW2aFHaH9oyf+usWp2OQxbeV3zWYJVUTmxoUH/Y=,iv:WG7jlSOFLevsQgJGhjoWT8tSrIUsAiBpoDYgv4DcLpE=,tag:lCmisT5arNkpQz6y7R4zfA==,type:str]
     pgp: []
     version: 3.9.1
