--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,43 +4,43 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:6G8PVuUIiVLeNkjwiI5dBce7SjUFNFONAoGH6Vuw5083taj9f6cvbC28FzZkKGfkXGLPsEslPKNmBLHwNdeqlJQ=,iv:BSbWisRr6XLXIWkJ8Aq1XJsArsjSX9TWrVxyNo7RjBU=,tag:6j7/0GOwll/NjOsQqhMOVQ==,type:comment]
-    #ENC[AES256_GCM,data:WaeYU1xoL8b991KVAaeDzgo2wO+KJ6/q67GDSJa3nbxwnvikulqKbUzpZkU=,iv:d/RjF6JldY4mbG4N7u19QRjDzXPv5m+ID0PXP4iENoE=,tag:li1BSXgCqSWiBFhVHnHAAA==,type:comment]
-    VIP: ENC[AES256_GCM,data:P6B/Eg4YFOk7BfXvaw==,iv:38SxJW+w/N7zmPy3jI9Lao5vj21BRM3tKHcshHix1QI=,tag:Z8aRZhPUdgsJrg+TiYVmyw==,type:str]
-    #ENC[AES256_GCM,data:1GNtSfiLypVn/EKbsa33O/gkV4NS42BTg53V,iv:38UYNw9qJTGtLBwTxxCFTMYqUH50vPvfeIK7NPJQ6ho=,tag:lOT47U0mhhiQyArtlQLQNg==,type:comment]
-    #ENC[AES256_GCM,data:T6R7DqrPAckWPo0s4Mmce4BXl7n4otXD+oeYkukwQPU4jg3dnVaA4DmBuY4zAm6rlWuMQW2YCOnZMwDURAYUICpePN8dfpxxIjna0+n5agkKXuVfI6rRrUU=,iv:LFOQpdoCk6tp/eSG5h3nh3FFp7ko5Rt4ojpAHmra5Sw=,tag:K6GOc9xRt+aM6I1m6dqvXA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:+Va87GH9rA+bFKB7zT4=,iv:PHybxEkE/U394+2Oxt0Jsr0wWxIeSVuGdvFpWXkC/Rs=,tag:8gakNeqXglakcoEBpBia8g==,type:str]
-    #ENC[AES256_GCM,data:LhkB0uYDg3YZFXz2yE4ahI+el5E2hyyNGFbuQ8YwJz8r1w==,iv:nFNAOGa095337BJOrcij2wxkItiX0x4bg0wqbViEFtY=,tag:jwjfYwoKcYxvZa2ekyhUew==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:SgVLwVzME9toA1P2+g==,iv:ZzOdG+C1XzSnk6ybRXEuKIxlHViz6NY8/C9vNs001Is=,tag:2EtSpj4eGPQdKaRiVVPYFw==,type:str]
-    #ENC[AES256_GCM,data:IS7tNfY3lF9ux0Y5pizQIJfpEGgJsjg7TCxk2z4V/tsp1cb5ZLmfU0PyrK6ASu4=,iv:iNa3A0LGzHQO7u0KjSIjzQ6Z62e0ZP9Tgh2L7kVnPgs=,tag:T7rP7ss+ksrUsOxPfbkceg==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:QftVHwW8/Chjssiwg68Na48FpOXqZIoZP3Y9CkxnNA==,iv:zLKj7+LuTX040m6rI1hSt1+JvJEMj8wch/H+91M+jpg=,tag:QbDt8VRjdMCWyECMxBvZ5w==,type:str]
-    #ENC[AES256_GCM,data:K+4sOfv9BJPq14pwwgPg9p43S6ixu64NpfHqiL7T58cQdha4iEwDaHbB6yvoXStpjxnalo1LOc4SdzP8ENMSp2IUVz69vofkGhf3AzR6X1f2Sg==,iv:qEHGnU2CrzOGMve/lGfJJ+hmc9Ln1Iybgthd2n79iU8=,tag:bmJonK04Xtt/gG3bVPe16A==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:esdIRYrpFouSXdf9Fvju,iv:Jhkdrmunyy6atxC/ZkUWTfojyjvw/GgYFwKkqhEEw/k=,tag:eR66n0WvmYB2B/jqTFFIPg==,type:str]
-    #ENC[AES256_GCM,data:AM8HQ9YNQ7rUe3UXxjfEpaTMPWD1ma3ql4ysTAT1J/PI,iv:vFrli94dOtOBdRsjBDyhS3yyg0BW2zy+nDIwxfQbB4k=,tag:S8tRbntLSM/Ub1rR6n0cIg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:5886DRqeMBnsoOp0KDD0,iv:+2TfU8c/HZm+n1J5jG92XnomQq+u6y7cevQvxlp5Fbg=,tag:j+FOulzqgF8zVzNDV/PMDA==,type:str]
-    #ENC[AES256_GCM,data:nU7BlYrEAaNXm9K3O2lnWssM5QJO1U5geICy4iGCbWu7hFfTTyWm+ATyZPJjXrGVkPtPXihMaO9jUSl5Dwzy8rGs9wNeUWyy0ql2QDbNK2U=,iv:1Qzu0LoWpeQ1WKPRBxK9wMRt16yfTvXcglvA4pKLWx8=,tag:mwSzbAq/aQKifkhG934LMw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:blJ3UzUQ5lu9uRUEoeCf,iv:s1VoW78WPJIYLKxCFad6qW3S+kRtTD2WZdwv8Z0PxBg=,tag:jgHCP/HGWSIkvbnjxxSzvw==,type:str]
-    #ENC[AES256_GCM,data:l2SdeBRfksG8qF8IZ1qQmaCKQEaWYkSZ+1jiOK3ZJkTpAvgzC5GgJRmkSrKV1KrUIRU1+blUYDfQcGA99PbQIimmZ5nZSJPGiTY3THatjnAMAYy7yTAb,iv:sria2aageQu3pylTdXA9+mp+CXrOFm4pNnBxBIoh03Q=,tag:el3ONqDpStT9B8WfnEeBkA==,type:comment]
-    #ENC[AES256_GCM,data:y4KXB0BXf0Zv+iXoR5wyHJlkG49eKkWOWbSOiooKeKijgWNGZghzmctIeaoGqV2o2iP+pk0SMifsyuo360clVLdhcIzJH3Aiv89Pfpud9z/N+c8n2OrtErnk2xcXj5HLokNk4kzMjIOU7otmXs3W1++UaEkjzlimVMu/kQ==,iv:HO6no5pdglHkp6IxFpHJCb0x4sV4pQnebBq1E8Svc2w=,tag:ePj5t+/IR/qj9IVmZ3uoKg==,type:comment]
-    #ENC[AES256_GCM,data:bG7SqIqaQYsEtdnfHcpmboAdCajD15pFdzObah0DlA4Fj7JQn566Ql5cMNNqXLwrtdjID0Y0sfDOvnXABpVzjfbhri4XkQgFbLXKee4sxp8=,iv:jLCMU6rPwTjvbttjA9S+g/NN8sRMtBAO2eB0rp8EidA=,tag:rrEhJpnYcR7d6PDryMcm3g==,type:comment]
-    #ENC[AES256_GCM,data:xnOhCKiwuWqHY/8xjbEj9FM+Sf320izf44XzSjt2WNSgv29ApD5R8mvZWHA4HfhQF7GBFanV,iv:LCDu4wbgDgedoh+iX2Pmyprbwf0zKb1u4bqJmwHJXUY=,tag:/7ZayWKRvosgpGE2QJFD9Q==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:/0Er+x2YYAC7q0j1Gss=,iv:d/Debq1quxPjh7m/AAIbHDiYtRs3hsIWTM6hOWkdgfg=,tag:GiLQ4mvKE/lpefHVBVnNUw==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:d0bBd39jn41AfG0M,iv:BRE7pvk6A5kVA6p2TCle9pBT+QrKQ3/uAu6TnmjaI+c=,tag:UiRfGt8n0MFK7jaIlFkAVw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Fdo8TfBaX8a2TvV8iAkIKkM=,iv:cHnu6wDY/HjN+87mWgyEi+u5LGM5VlhTi9fAB3TGlsc=,tag:kgAiBRWtscxqiFtPTH10fw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:aPf5zy4/PPvs/4rCK8vkSON58x+KIMymLNFWrGiJDElBWcjV7Ni+kA==,iv:fNVfkMDWpO46jVTQaQoL/VZA4nILklZzE85iTke0nHQ=,tag:61exOssf32v4bnfSYKsFbg==,type:str]
-    DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:87GFDDS8uq9rNPxggQxe/9pAbOuT7fFbGGxDNiqgKO+c9y1DMQ==,iv:oYKyYfdGZ0CrNAst8XO4sLurL8LEGEPcHELQQE23ghM=,tag:ZjVG1iKWMc9rA7UUzQxLBg==,type:str]
-    #ENC[AES256_GCM,data:v6Lfor6veivskAodyBvkiJb3UlilPreTWrsM/Q2LZ8Z4mQ/pDpdaQURO0OK3GevSBz1GDBW3eag=,iv:DDxOF2FHWEU/B3Bj/scV9TL2jqQ8MR9lIG8uge5qF9c=,tag:A/3wxLvrT8WCQrUiBTsqgw==,type:comment]
-    #ENC[AES256_GCM,data:azNDJD5OJBOsCm9kF1DO7BbkcAAdSnwdqQ==,iv:v5iB1jUlIgMfNVqPhYll4bFdcEEaigjKQEQEKe0a2Uo=,tag:UENBYeBFeo6/kw35o9O8Hw==,type:comment]
-    #ENC[AES256_GCM,data:46O+ishUsl9IkKqIqn79vaqUJ5gIxgZp6JR7ywwlVCixs4twbY4zZgOkTjfa6kaMxUipU1ucJWHEH14jIHaK23DXu+EE7OSNB2NoFSM=,iv:KDSk+MElGArujhzIinR0qmZKlfSOSoMtoDJqxfwNDeo=,tag:+XYti20Yx3mgLxvK3JZbvw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:aEEjrWqmqCQJWU9F7yPFUssJrZth/FSp4crx2C0FatKUEwntVpU4BmHysYDOWeSR,iv:yf4bzefkCm5/ALx8KxDR5SFmMAhhfq1/u01ByYmntGM=,tag:Djkl1qOQTMvZ8KjYDTz2Lw==,type:str]
-    #ENC[AES256_GCM,data:EVp5orbS5cQLj/0F9GD1nqVwEaXBNE+ZfwjAhW+JX+mXpHoHJVo+fVo1CWgCOqY5zrT7iE2SzYvjoi3SXGx6tZXkZKZVJf8=,iv:3UlFaiOR5Ul8s10xPulytJ0qWbwEUOKjIuVR3iinD/k=,tag:hlR8b3twEx3r1+/78WCGtA==,type:comment]
-    #ENC[AES256_GCM,data:VVD8ii17YhRbbU6zcXuMZhxEgDIYlAqFDBZ9W/qdLpnf1tP6AmCHXWGp0sR+lrSEkIeu1swX,iv:JvIv+YltnrXDIdJk5nPbDCQDiR3la4plLz3nDm5c1QU=,tag:AiggwccmPILlSN0vzSrUyA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:0tRp5odhwg==,iv:57YLHF3eHETOHgPuncZUa7R548Xf5VW1SGsxH2+vDPs=,tag:5iUQSo/7wpAFC9tDd17pVg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:1TQu0j5x3/S4xV2IVyKSib50//M=,iv:TmyyxRA3rCtBtMwfH0InGWCz2HiDHQ0AXG+pdeuM2Ak=,tag:QulsW4Jw+spBAJfm/gDyZA==,type:str]
-    #ENC[AES256_GCM,data:/C+yT88iu0TZsCqCblQ=,iv:s+N9nqpcfjQWN82wxxHWu9FdceJQs29HlpgvriqbNSs=,tag:mE7Hl5qzbEVSL2lNCH8zLw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:ZWPdWEG5zfSFVm+Qfw==,iv:YQTye0z/JokpqUI2JOCS0VlK4m5pApgiXWJCDzrCGD0=,tag:iGmGbClcV13U03rk17Qfkw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:+XzZgBdM5F6zkk1ylQ==,iv:B+HJaVc8bPioep9CFQatqgMDgvxckt69cPWdYuSNyzk=,tag:V6kyPryGI3MlZjGlSfH04g==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:GUAeeg==,iv:GQnd5QVHOUnKlFCKVCe01S76Z27A6OVJLd0QqEQ18vE=,tag:ae2ztxuotRcwPIJgiBLJVQ==,type:str]
+    #ENC[AES256_GCM,data:UUH+NUhIM4pV4OufqG4uk0+v2cTlIFMLz0/zlZIRHX6bAujd06VMvxe0QRSmLSwCG/Dg+xn9+nkYyZaMlZSStkg=,iv:v4pPnYpq8VHEyCKi9kwAWYUIfEq8f5sOoTwFFQXILDo=,tag:k7Ei746UABm4qGathSsEqw==,type:comment]
+    #ENC[AES256_GCM,data:nV2njOeZHvfkjRiqY8wjkt0E3kHPY+Rbx1EzJxEcpvqLkO+Eiv5A41+szGA=,iv:ARTXGU3p1cn5YSd9mOouV7o/LS++hg+ClIil3mpNs8Y=,tag:KvNVbbpb74rrPZkfkgqDXA==,type:comment]
+    VIP: ENC[AES256_GCM,data:1KDB1YkRubpW5eTovg==,iv:ukt4rPlAedqXqoKd9ppg+rO4IOS6kOoVyoaDRlfl1vU=,tag:+dn/A3NP7byg2v/ZpecTWw==,type:str]
+    #ENC[AES256_GCM,data:n4HeT5FwFqoiNvPWoLzmSIXlBNr9bnk67eBg,iv:oDM0o2EoZ8J7SI16Ap2kTFnEmcpMHg9aqiCbj9fFB/s=,tag:10lnyRm3HnfeaQN3PHtY/Q==,type:comment]
+    #ENC[AES256_GCM,data:1fYiaZ/jtyOlhlD3GMhD3nt7joFFPF0UxL58kB0wfaoTAKJZ3SLZkiR35Yxr20CYUwU2bO+PhNTC42fipJ24mupT5lF7W+Q1h5xX2wo3mXjmEejtKSdsrGA=,iv:e8RbMRarlqzE9CSLs/xB78xuw8Yqtmo13Ta/XHUGAbs=,tag:bCN1iuf1QGmyRiZAne3rBQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:fRqawGamddR3rPZCOhc=,iv:qJ+JB8/jaW48TZnR4ORofqOti9MuHXXRFvdOI47p76g=,tag:6iyMPy78dP+AYRrE35aRkA==,type:str]
+    #ENC[AES256_GCM,data:DcZqn7/RudQARu+CKUnynRE7e6lcYNWhiAIjgN0waQuRVA==,iv:Dd4iWgrNMgvYh2lO4j83YUbvcX+tfiljdEYLk0INEck=,tag:4ZP2kqC1t7lFShiefsXMmA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:iKw0GAdbfNsQcrPsUw==,iv:2TJArRL7La3MoS23IipuuZ9EFBhamY2fi6nQLntvlS8=,tag:qgoHG5RxSykGSLt683jfPw==,type:str]
+    #ENC[AES256_GCM,data:UUPH3R7JrfIL8+HnsZryIcVGKpS6ZusNKoxSI8cl3NzBojA7RnW3l8KDpuyG6+s=,iv:SNWprfj6c7zES8gAp/I7F4aQwd35GmZuy9lNDoRAA8Y=,tag:41BJf7MUMSOD1jFSQxnpsg==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:f5IA5UfSK5cnX8DhncghA4qBOYnACHQIgGG45vsJgw==,iv:GPhomZTrUBJraJ5zjxQXSe+DSZoxtLuS6TFjFbaV6Z4=,tag:5+VaSDlKATIw7q0PiVbreQ==,type:str]
+    #ENC[AES256_GCM,data:Na1x5gnykRxKE1t1NEnRuv4iRG1FYJAfeclXxIYXbFTYvbahpVodoefu/Jb71gWIJe7cpOrD0YynWHvqXiQZCK5XOJMRwSV1Mex9WbpCZaMkcg==,iv:vEaA8CKb0zpfCXAP4lveSEYkwX/Qwq+VXgsZLNgrKe4=,tag:PRtk0rSmX/d5TSOor88a0Q==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:zIPa5Eb5wlGUPCaxFnJL,iv:P4jqnnyeEVs27rqtC2wWoCLlKBBPDtg1LpHK17mJDv4=,tag:RDoYawLV1T5fm7JLZxNv5g==,type:str]
+    #ENC[AES256_GCM,data:e+9bKdPQJn/GgZcHZYEmytGKyvZsCQdhvPiyKFwdo6Tw,iv:C0fJpK+M1xjvBZ2FVZs36UsYP9U/6vH/Eyf4EGxMG9E=,tag:6wgWgkKmwJ4lu9JRkZNQIQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:+7uoLVheaceRt/gZl2aB,iv:/1VK6yp+e0SqbYRVDKq73/wToBTBPITMoh+f8nGNubo=,tag:8cy5Jrq/2wiEpV1Z1Hj2Kw==,type:str]
+    #ENC[AES256_GCM,data:bT+KJpe4tGUsXSMTUotfoAsBYOUgJfNs5dPVUzJe5IkYUEpfb/gcgCm1KX+kMETMgVXEyfWaPpSFwL/UVzrQ9QjyNsNbt4apre8Hpy9oo0U=,iv:/0jimq7jvEKBZPJ94IyRb6jetLgk5imaU1lUufWGclM=,tag:gW9DcZSWHXbLfHh81cAE+A==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:li5Av4mbyAjCWf9q7hRd,iv:/Qt/TuZuphrybx1ZMa65SJAKT1owvgYM/43Ndjzj1UM=,tag:WlC91AhGX9+H8bOFXst7yQ==,type:str]
+    #ENC[AES256_GCM,data:tcDs8mK1Qiry2KhSEB9XASvfH7GJzIUPeSAZH/PWLroFKr6GN86eCGoE5+2uzBIJZolUksEYzboDeFLx8sGztjDKsJCWbtsIu2K0meN6oJb5JVpfQ40r,iv:oXxI6ai7N+rcFqF6bhiBl7k9fghbqcqP2539imI1cKE=,tag:KtJRUVyEkoGWXESiHZ63FA==,type:comment]
+    #ENC[AES256_GCM,data:JypJsXUltL47/Jzl7vbvgiw5AE4dO0M0JcwiHCYvNFB7huyXVtbueoCDYSzleXGkGCVoxYJYbL3p8C863Hhq1qF+P3a8hX3guNmkahTgrNZwSduCQq/qZbO1MTZJvMKpdxtshtr0fwsrOh/rjWp3YmeKusx5SAn4Gc3eIA==,iv:WlXxkIH05PqAcCLcDxwIwqOfOHJkHoLV1p0TrkSvCzo=,tag:Kq4BDdwGIVSRSETpjoNL5A==,type:comment]
+    #ENC[AES256_GCM,data:5czrFqtJ3lCsS4Q0t4LtD5sINKorgthLnrZObNIwJ9+kUNnPlPUGsRybkXj17/znmAZs4opGNC7UF8gMjaVeQknacm/Eipl8m5Ec8WgUtG8=,iv:0z/7VCnvWWmdQYH9uNCkHxR6mfFSSg5LePsNdMZabhI=,tag:d4UZGXKbduyIWQNVuO7IVw==,type:comment]
+    #ENC[AES256_GCM,data:z6kj4ASHdkVauu1jQYxkYh1DSaUajnO0Qp2PQ92nkicPC47NV2wy97vwgMC9Kbdp2sM+UTlo,iv:46ThU2u90nRMBaNvfgbiPa9bPE73/txfkX/Wscq7VSw=,tag:IB6a5w8ZKx4T1a1y5ppe5Q==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:TSA8F7SLXRbOt29Vfoo=,iv:FS//nzjGyv/Idrh7R7aHOB9P7G0GXqnY+YTyp26Dhq8=,tag:G4vcZys+OFLCzzCDNJ9Ibw==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:uf04K25FkA0+tv2A,iv:PiJxShGSnAuJNOEV50OaXuVsAn8Yq5sbw8S2Bm83Qlk=,tag:1OUSdDenNahx6JjC31qNeA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:3bHHWGxHmgyuCJjAFCqKddE=,iv:uH71Tloq4CMe2k2ePjTcPnmvWJa6J5LHrzAlcdx2BKg=,tag:VICIzNtvWYpA6I1BbW/Png==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:bSXFfJyV6FD5EzSR/71GsJ6zLaiaUsoBgsq/uUjgFM3OBq0ENcserA==,iv:KyjqfJviuBBtj0xgjJXoHySLsncgrx3tfeyeV8g5Gxo=,tag:YQzbpuiaXAZSNPpAO4VfSg==,type:str]
+    DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:mbo3B5RU4UNQW2XymnZg2PCksEIviFix5MVTOInZ4vu7vFvgCA==,iv:GASfecKhNIJ6p4TiI3DNHmvv6a6jeh7cz42LU2LxVNM=,tag:PzlL5lQI2Xhi5CNKXnDBfg==,type:str]
+    #ENC[AES256_GCM,data:/B4URVK0mv8jJWEMzlzULHJFAM36qxgfir7Uu3GYnCil67vMpfu69FayHO0RBSn+0K1qq7DzYMQ=,iv:b11X4uiSvBCi0FIkcsKsNPSIdAXl4RNXt7OhMVBy0m4=,tag:ce0XIuk1Loe0XFqwpvHp5A==,type:comment]
+    #ENC[AES256_GCM,data:/457VyhAbv7tiEzE1ZgvcJcjVv16FLPo2A==,iv:ESU55Qp7pKhfcFzDf1Eta3H9b2O+iUiEecdCniUToOI=,tag:ln9kuuypTrxGy1i32uHfxw==,type:comment]
+    #ENC[AES256_GCM,data:zdQXnannlU0haYq3PuPg6f5sEWEMULvS9FO1GX2mQhLagwIMHw5GE/o4KErHxIwvSg6rogTTF21G/DJyyNBytG5f6kRq4rEETENGTSE=,iv:IhNih31MakyqYbme4mkqGwBH0KHiiw+h5htgSc48kB8=,tag:CBeA8mjmIKkHEgyGitAgwQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:F7PRxCOk+mzH5SPXPGY6ArwsCQRHKcNrqzlTxYGrvdZnGSCtaAHdtBrpftabUrOa,iv:C5nUYk+xNchsmSxAstuZ8YRSEsf7T5slr/98/yyHYIg=,tag:dmil7wBcmAmSrpc9WDa48A==,type:str]
+    #ENC[AES256_GCM,data:PkJTCKGfE+Cz9PFkutfOm5R8yLQyLJp59ZLyQGNyMmQAUVpzjkrlnqCNjipT6CCfRvTyQ66EWLwQ7k4meXluwQnoNnqxfY8=,iv:eXvcSRPx4P8NSDtew4rjrWlDKuUOZSIDfywrRLmI0YA=,tag:+P8Zj8kmVL1Y7knx/Adv8A==,type:comment]
+    #ENC[AES256_GCM,data:Ss8M4y+QHsayQ2Ur2WX17K6tOr0oorv3U/Yb0Y46KyqvNjnHKHPXmAmop+q1m4c/SbTwfb8/,iv:LRUnMe+KjFFdCle7IHqN8q6VwRpbJFxHT1x1n8tBAHQ=,tag:CM5Bt4MNg7JnqFqGujFJlA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:Jh+J2oNl7g==,iv:FZ6+voV4uRiZmpMaphrv6ONUCdwhQOz/SaRTXRqgqYw=,tag:gmlplJOg3zgeXO2Ksi8ilg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:7+rPyMsJf+iLx4TjSB2BKdpeBCE=,iv:agn1297NseqgJvDeqy4WpEo1NtRqPvCobCSF7mtURco=,tag:dDzoSOE8PXQBcbAEAGmzZw==,type:str]
+    #ENC[AES256_GCM,data:jcUNykrEHVwPQV7bo+E=,iv:SK11FExYcVNoU9WU70SKzXhdTEu8vvi+fiGoInaJ6qc=,tag:rMPlYBJAlu+/5Ft4WWTf4w==,type:comment]
+    PODNET: ENC[AES256_GCM,data:JoD1YqvALEzwMaoTAQ==,iv:9Zws91p54pvXg80961S2n1UCvqM5WtiUUonLv99FLOg=,tag:KTWgpZmM5qwC8b36Ej0Dhw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:lRVyjtYOrhVdEBcRpQ==,iv:ISGhPWRfFYmItljw2JvGVaCCQ/jqD/wu6k1YtzozjOY=,tag:EDkm1phQi/YerFLIPagpBQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:7Vj2aw==,iv:pZinYYuiWMoFBuDmTNbcHsr0mxX+8WFUJcoS0yBeLy8=,tag:GlTDOU1Z1AUr1Ct8f9DSJA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -51,14 +51,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArYmFxZUlLektiQytYZFJY
-            aXVER2xOY3NxK0lUdkJUTW1sUHVXSGZQOFJrCnE5bS9iVDg4UEZONkpBM1NML0Vj
-            bFZGdENwMGtGSU9STXgzSlQrbHZPdUEKLS0tIHB0LzVRUW1pN0svYmtneEFFVllw
-            dmV5UWZyK0dCTmd0SmRzY0YxUENKY28KR+TXY4Lk5luS7shmHL6A6nmNww0nidED
-            DzeVRH/SaB0eNWJH4BtRbcB4Xdsv7e4v6mbu+inE+OBw3c3+YyFOzg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1azBuQ1hEYVNCczFoaGJj
+            ckM4RklwUGh5aVEycXI4Vi9WSUViRzROYzJZClhtVFdCYy91VVA0dGZYcUx5dStE
+            ZVE3ZzRNU1ZPN2ZKMjkzOS9SSXc0aUEKLS0tIEJFM05KSCt4d2pJazRHYjAwWmd5
+            TndTbU9WdUpveWFaUWp2dzFHdDVkTlUKz4pz8CCMm4RnyUhMpAGiRHRnhjUXMCgU
+            jvTSpFrl2+njNcU9HTv6emajRABSL/CiZ28/GnJEUuYqboCCw5N17g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-30T23:02:32Z"
-    mac: ENC[AES256_GCM,data:sPghhhT0PREV08S0Rp2pnIHHbIOPG0icSiU95fScs7ZqMX49xFCCzJ/ygfqxUxZtngql0coGKybDYRTALOdcIxQb4V2z4cFIgl5pyhLd6RZynXAWkRpxcMz8u8lKNBfhqySD1YymntP9t63vv0jr1L+TJJlVEzYmHA1ZP6DP0LQ=,iv:sNCi1Qqa/Zv9JocvMNl1JMGyNmH89fEHqElpl7z2/Es=,tag:DcnuQ9biV8gbmywupIGbhg==,type:str]
+    lastmodified: "2024-12-30T23:10:35Z"
+    mac: ENC[AES256_GCM,data:cMzaAUzLLt234yR36BP5/oD4j8PYe1eqwce2gLbiAhkitoeeKN/atGLBdQTvA6h0pqA2No72FaCPi+TTvDaOOSbHDWm3fJ1Ozfq6PNwRuIcLJZx1NZ7x9a2/lX3/04AwRLYTtMxRYtgAPMiBGwV96Lh9jKsJrpDpQffrJZz9IkQ=,iv:5V2jMxJ67JKHhkBQwSv2VwUC0vlyynX4lxp1abQoG2I=,tag:QFzFTrdCnAA3XnkOAtJi6w==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
