--- a/clusters/main/kubernetes/apps/cloudflareddns/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/cloudflareddns/app/helm-release.yaml
@@ -35,7 +35,7 @@ spec:
     cloudflareddns:
       api_key: ${DOMAIN_0_CLOUDFLARE_TOKEN}
       host_zone_record:
-      - domain: homelab.${DOMAIN_0}
+      - domain: ${DOMAIN_0}
         record: A
         zone: ${DOMAIN_0}
       user: ${DOMAIN_0_EMAIL}
